Tries to fix the persistence of AreaStandard within Standard and a few layout modifications, mainly MyDialog to substitue Window.alert

--- a/war/Owb.html
+++ b/war/Owb.html
@@ -14,10 +14,11 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Owb.css">
 
+	
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Orphanage Without Borders</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
